# waydroid_script

./: pyproject.toml
src/waydroid_script/: __main__.py  main.py
src/waydroid_script/stuff/: android_id.py  gapps.py  general.py  hidestatusbar.py  houdini.py  magisk.py  microg.py  ndk.py  nodataperm.py  smartdock.py  widevine.py
src/waydroid_script/tools/: container.py  helper.py  images.py
